test/files/neg/t5683.check
t5683.scala:12: error: inferred kinds of the type arguments (Object,Int) do not conform to the expected kinds of the type parameters (type M,type B).
Object's type parameters do not match type M's expected parameters:
class Object has no type parameters, but type M has one
  val crash: K[StringW,Int,Int] = k{ (y: Int) => null: W[String, Int] }
                                  ^
t5683.scala:12: error: type mismatch;
 found   : Int => Test.W[String,Int]
 required: Int => M[B]
  val crash: K[StringW,Int,Int] = k{ (y: Int) => null: W[String, Int] }
                                              ^
t5683.scala:12: error: type mismatch;
 found   : Test.K[M,Int,B]
 required: Test.K[Test.StringW,Int,Int]
  val crash: K[StringW,Int,Int] = k{ (y: Int) => null: W[String, Int] }
                                   ^
three errors found
